--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,8 +15,5 @@ conda:
 python:
   version: "3.8"
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+    - requirements: docs/requirements.txt
   system_packages: true
