--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,4 +13,6 @@ python:
   version: "3.8"
   install:
     - requirements: docs/requirements.txt
+      extra_requirements:
+        - chrysalis-st
   system_packages: true
