--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "chrysalis-st"
-version = "0.2.1b"
+version = "0.2.0"
 authors = [
   {name="Demeter Túrós"},
 ]
@@ -21,7 +21,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "archetypes==0.4.2",  # last version before PyTorch integration, chrysalis is not using that yet
+    "archetypes==0.4.2",  # last version before PyTorch integration, chrysalis is not relying on that yet
     "matplotlib",
     "numpy",
     "pandas",
